# sd-radio-spectral-fits

./: .gitignore  LICENSE  README.md  case1_raw_on_off_hot.fits  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: Flagging_bad_scan_20260401v2.md  OTF_gridding_and_plait_fft_manual_updated_2026-03-26_r11_github.md  OTF_gridding_and_plait_fft_manual_updated_2026-03-26_r12_github.md  OTF_gridding_and_plait_fft_manual_updated_2026-03-26_r5.md  OTF_gridding_and_plait_fft_manual_updated_2026-03-26_r9.md  OTF_gridding_and_plait_fft_manual_updated_2026-03-30_calibration_scaling_added.md  OTF_gridding_and_plait_fft_manual_updated_2026-04-12_beamaware_added.md  baseline_auto_detection_detailed_note_2026-03-27_rev3.md  baseline_coadd_relationship_diagram_3slides.pptx  baseline_subtraction_detailed_manual_linefree_modes_2026-03-27_rev6.md  calibrate_qc_spur_on_prescreen_detailed_manual_ja_2026-04-10.md  calibrate_statewise_qc_detailed_manual_ja_2026-04-10.md  calibrate_statewise_qc_integrated_master_manual_ja_2026-04-11_checked_summary8_rev2.md  detect_and_repair_narrow_spurs_detailed_manual_ja.md  estimate_relative_beam_intensities_manual_v18_ja.md  map_3d_plotting_cookbook_ja.md  map_3d_plotting_manual_ja.md  moving_body_mapping_usage_ja_v10.md  multibeam_beam_measurement_manual_v2.md  multibeam_beam_measurement_manual_v3.md  multibeam_beam_measurement_manual_v4_01_architecture_and_shared_config.md  multibeam_beam_measurement_manual_v4_02_sunscan_command_reference.md  multibeam_beam_measurement_manual_v4_03_cookbook.md  multibeam_beam_measurement_manual_v4_INDEX.md  otf_gridding_kernel_detailed_manual_2026-03-29_r11_github.md  otf_gridding_kernel_detailed_manual_2026-03-29_r5.md  otf_gridding_kernel_detailed_manual_2026-04-12_r12_beamaware.md  otf_provenance_detailed_manual_2026-04-12.md  package_cookbook_jp_map3d_rev3_2026-03-10.md  package_manual_jp_map3d_complete_rev3_2026-03-10.md  plotting_updated_v5p5_full_manual_ja_bundle_merged_rev1.md  plotting_updated_v5p5_full_manual_ja_current_merged.md  plotting_updated_v5p5_mega_cookbook_ja_bundle_merged_rev1.md  plotting_updated_v5p5_mega_cookbook_ja_current_merged_fuller.md  profile_view_manual_ja_v2.md  scantable_sdfits_provenance_manual_2026-04-12.md  sdfits_final_complete_manual_ja.md  sdfits_final_complete_manual_ja_scaling_fixed.md  sdfits_final_complete_manual_ja_ssysobs_updated.md  sdrsf_cookbook_ja_scaling_fixed.md  (+9 more)
docs/necst/: 00_overview_and_relationships.md  10_converter_manual.md  20_sunscan_singlebeam_manual.md  30_sunscan_multibeam_manual.md  50_cookbook.md  (+5 more)
examples/: __init__.py  _cases.py  ex01_raw_on_off_hot.py  ex02_tastar_dump_multi_points.py  ex03_integrated_tastar_multi_points.py  ex04_integrated_doppler_corrected.py  ex05_otf_raw_hot_off_continuous_on.py  ex06_sun_scan_raw_radec_target_azel_offset.py  ex07_sun_scan_total_power_only.py
src/tools/: pyproject.toml
src/tools/necst/: README.md  analysis_stream_selection.py  beam_model.py  check_spectrometer_config.py  multibeam_beam_measurement_overall_spec_v1_1.md  necst_v4_plot_trajectory.py  necst_v4_sdfits_converter.py  optical_pointing_image_process.py  spectral_recording_snapshot.py  sunscan_core_refactor_spec_v1_1.md  sunscan_extract_multibeam.py  sunscan_fit_multibeam.py  sunscan_make_pseudo_multibeam.py  sunscan_multibeam.py  sunscan_singlebeam.py
src/tools/necst/multibeam_beam_measurement/: __init__.py  beam_geometry.py  beam_relative_gain.py  beam_rotation_shared.py  check_spectrometer_config.py  config_io.py  config_separation_model.py  legacy_loaders.py  plot_beam_fit_residuals_xy.py  public_api.py  pure_rotation_model.py  sunscan_config.py  sunscan_core.py  sunscan_extract_multibeam.py  sunscan_fit_multibeam.py  sunscan_io.py  sunscan_legacy_compat.py  sunscan_multibeam.py  sunscan_report.py  sunscan_singlebeam.py  synthetic_multibeam.py
src/tools/necst/pointing_fit/: __init__.py  apply.py  cli.py  fit.py  inspect.py  io_utils.py  normalize.py  report.py
src/tools/necst/pointing_fit/models/: __init__.py  base.py  nanten2.py  omu1p85m.py
src/tools/sdrsf_pipeline/: README.md  README_ja.md  pyproject.toml  requirements-fits.txt
src/tools/sdrsf_pipeline/docs/: RAW_DATA_GUIDE.md  RAW_DATA_GUIDE_ja.md  README.md  README_ja.md  USER_GUIDE.md  USER_GUIDE_ja.md
src/tools/sdrsf_pipeline/examples/: demo_coadd_vlsrk.py  make_rawspec_example.py
src/tools/sdrsf_pipeline/sdrsf_pipeline/scripts/: baseline_fit_fits.py  coadd_fits_vlsrk.py  coadd_points.py  concat_fits.py  export_sdfits.py  make_rawspec.py  make_tastar.py  regrid_and_concat.py
src/tools/sdrsf_pipeline/sdrsf_pipeline/tests/: test_axis.py  test_baseline.py  test_coadd_vlsrk_optional.py  test_rawspec.py  test_windows.py
src/tools/sdrsf_pipeline/tests/: test_baseline.py  test_calibrate.py  test_default_vgrid_helpers.py  test_rawspec.py  test_regrid_vlsrk.py  test_utils_windows.py  test_vcorr_auto.py
tests/: helpers.py  test_cube_analysis_contracts.py  test_headers_and_io.py  test_sdfits_writer_multiline_restfreq_columns.py  test_session_and_orchestrator.py  test_update14_snapshot_frequency_wcs_exactness.py
(+98 files in other folders)
