[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-radio-spectral-fits"
version = "1.2.13" 
description = "Single-dish radio spectral SDFITS writer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Toshikazu Onishi"}]
dependencies = [
  "numpy>=2.00",
  "astropy>=5.0",
  "pandas",
  "scipy",
  "spectral-cube",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://example.invalid/sd-radio-spectral-fits"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # すべてのフォルダをスキャン対象にする
# exclude は削除するか、空にしてください