[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-radio-spectral-fits-tools"
version = "0.2.0"
dependencies = [
    "sd-radio-spectral-fits",
    "numpy>=2.00",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "tomlkit>=0.12",
    ]


[project.scripts]
necst_v4_sdfits_converter = "necst.necst_v4_sdfits_converter:main"
sunscan_singlebeam = "necst.sunscan_singlebeam:main"
sunscan_extract_multibeam = "necst.sunscan_extract_multibeam:main"
sunscan_make_pseudo_multibeam = "necst.sunscan_make_pseudo_multibeam:main"
check_spectrometer_config = "necst.check_spectrometer_config:main"
sunscan_multibeam = "necst.sunscan_multibeam:main"

pointing-fit = "necst.pointing_fit.cli:main"

optical-pointing-image-process = "necst.optical_pointing_image_process:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["necst*"]